cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 11)

include(cmake/HunterGate.cmake)

HunterGate(
    URL "https://github.com/VladislavMashkov/hunter/archive/v0.19.137.1.tar.gz"
    SHA1 "feabd55227870adfe44776d09e09789860e73e35"
)

project(main)
hunter_add_package(CURL)
find_package(CURL CONFIG REQUIRED)

add_executable(main ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
target_link_libraries(main PRIVATE CURL::libcurl)

install(TARGETS main RUNTIME DESTINATION bin)
